<resources>
    <string name="app_name">Nazar</string>
    <string name="welcome_to">Welcome to</string>
    <string name="id" translatable="false">817894282683-2f66mcir443nngrmstj8q7ifts54pnhm.apps.googleusercontent.com</string>
    <string name="login_as">You Are....?</string>
    <string name="parent">Parent</string>
    <string name="child">Child</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">OR</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="parent_email">Parent email address</string>
    <string name="your_email">Your email</string>
    <string name="child_name">Child Name</string>
    <string name="line">  track your child  </string>
    <string name="remember_me">Remember me</string>
    <string name="login_button">Login</string>
    <string name="login_">Login here</string>
    <string name="account_verification">Account Verification</string>
    <string name="login_here">Already have an account?</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="login_with_google">Login with google</string>
    <string name="new_here">Don\'t have an account?</string>
    <string name="please_verify">Please check your inbox for a confirmation email. Click the link in the email to confirm your email address</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="kids">Kids</string>
    <string name="parent_name">Parent Name</string>
    <string name="no_kids_added_yet">No kids added yet</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">YES</string>
    <string name="cancel">NO</string>
    <string name="enter_your_password_to_delete_your_account">Enter your password to delete your account</string>
    <string name="enter_your_old_and_new_passowrd">Enter your old and new password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="reenter_new_password">Re-enter new password</string>
    <string name="new_password_doesnt_match">New password doesn\'t match</string>
    <string name="enter_your_email_address">Please enter your email address to request a password reset.</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="confirm">Confirm</string>
    <string name="settings">Settings</string>
    <string name="main_permission">To track your child\'s activities, please read and allow the following permissions...</string>
    <string name="add_new_child_info">Add new child\'s credentials</string>
    <string name="new_child_email">Child\'s email address</string>
    <string name="new_child_name">Child\'s name</string>
    <string name="send_sms_permission">Send SMS Permission</string>
    <string name="send_sms_explanation">This permission is needed to be able to see the messages your child sends</string>
    <string name="read_sms_permission">Read SMS Permission</string>
    <string name="read_sms_explanation">This permission is needed to be able to read your child\'s messages</string>
    <string name="receive_sms_permission">Receive SMS Permission</string>
    <string name="receive_sms_explanation">This permission is needed to be able to read the messages received by your child</string>
    <string name="phone_state_permission">Phone state permission</string>
    <string name="read_phone_state_explanation">This permission is needed to be able to see your child calls info</string>
    <string name="read_call_log_permission">Read call log permission</string>
    <string name="read_call_log_explanation">This permission is needed to let you see your child\'s call log</string>
    <string name="read_contacts_permission">Read contacts permission</string>
    <string name="read_contacts_explanation">This permission is needed to get the names of your child\'s contacts</string>
    <string name="location_permission">Location permission</string>
    <string name="location_permission_explanation">This permission is needed to allow you to get your child\'s location</string>
    <string name="device_admin_permission">Device admin permission</string>
    <string name="device_admin_explanation">The Nazar need to be device admin to be able to lock the phone</string>
    <string name="write_settings_permission">Write settings permission</string>
    <string name="write_settings_permission_explanation">This permission is needed to allow the nazar to block other apps</string>
    <string name="overlay_permission">Overlay permission</string>
    <string name="overlay_permission_explanation">This permission is needed to monitor other apps</string>
    <string name="package_usage_permission">Package usage permission</string>
    <string name="package_usage_permission_explanation">This permission is needed to allow nazar to get and upload your child\'s apps info</string>
    <string name="please_enter_this_child_parent_email">Please enter this child\'s parent email</string>
    <string name="this_email_isnt_registered_as_parent">This email isn\'t registered as a parent</string>
    <string name="a_moment_ago">A moment ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="minutes_ago">Mins ago</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="authentication_succeeded">Authentication Succeeded</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="email_isnt_registered">Email isn\'t registered</string>
    <string name="wrong_password">Wrong password</string>
    <string name="loading">Loading…</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="email_is_already_in_use">Email is already in use</string>
    <string name="weak_password">Weak password</string>
    <string name="sign_up_falied">Signup Failed</string>
    <string name="enter_valid_password">Enter a valid password</string>
    <string name="image_uploaded_successfully">Image uploaded successfully</string>
    <string name="image_upload_error">Image upload error</string>
    <string name="name_validation">Enter a name less than 15 characters</string>
    <string name="please_add_a_profile_image">Please add a profile image</string>
    <string name="would_you_love_to_add_a_profile_image">Would you like to add a profile image?</string>
    <string name="please_turn_on_the_gps">Please turn on the gps on</string>
    <string name="you_re_offline_ncheck_your_connection_and_try_again">You\'re offline \nCheck your connection and try again</string>
    <string name="verification_email_sent_it_may_be_within_your_drafts">Verification email sent</string>
    <string name="please_download_google_play_services">Please download google play services</string>
    <string name="password_reset_email_sent">Password reset email sent, it may be within your drafts</string>
    <string name="web_filter" translatable="false">Web Filter</string>
    <string name="deleted_the_app">has uninstalled the app.</string>
    <string name="activity_log">Activity Log</string>
    <string name="apps">Apps</string>
    <string name="location">Location</string>
    <string name="upper_dot_s" translatable="false">\'s</string>
    <string name="device">device</string>
    <string name="no_messages_received_yet">No messages received yet</string>
    <string name="no_calls_received_yet">No calls received yet</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="contacts">Contacts</string>
    <string name="messages">Messages</string>
    <string name="calls">Calls</string>
    <string name="web_filter_disabled" translatable="false">Web filter disabled</string>
    <string name="web_filter_enabled" translatable="false">Web filter enabled</string>
    <string name="phone_unlocked">Phone Unlocked</string>
    <string name="phone_locked">Phone Locked</string>
    <string name="lock_timer_set_after">Phone will be locked after</string>
    <string name="hours">hours</string>
    <string name="and">and</string>
    <string name="minutes">minutes</string>
    <string name="hh">HH</string>
    <string name="colons">:</string>
    <string name="mm">MM</string>
    <string name="phone">phone</string>
    <string name="now_or_after_a_period">now, or after a period of time?</string>
    <string name="maximum_is_23_hours">Enter a valid hours, maximum is 23 hours</string>
    <string name="maximum_is_59_minutes">Enter a valid minutes, maximum is 59 minutes</string>
    <string name="lock">Lock</string>
    <string name="child_app_name">App name</string>
    <string name="sign_up_failed">sign up failed</string>
    <string name="sign_up_success">sign up success</string>
    <string name="enter_name">enter name</string>
    <string name="enter_password">enter password</string>
    <string name="enter_email">enter email</string>
    <string name="parent_not_found">parent_not_found</string>
    <string name="enter_parent_email">enter parent email</string>
</resources>