<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="locale"
    android:orientation="vertical"
    tools:context="activity.SettingsActivity">
    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewSettingsHeader"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:text="@string/account" />


                <Button
                    android:id="@+id/btnLogout"
                    style="@style/ButtonSettings"
                    android:text="@string/logout" />

                <Button
                    android:id="@+id/btnChangePassword"
                    style="@style/ButtonSettings"
                    android:text="@string/change_password" />


                <Button
                    android:id="@+id/btnDeleteAccount"
                    style="@style/ButtonSettings"
                    android:text="@string/delete_account" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewSettingsHeader"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:text="@string/info" />

                <Button
                    android:id="@+id/btnAbout"
                    style="@style/ButtonSettings"
                    android:text="@string/about" />

                <Button
                    android:id="@+id/btnSendFeedBack"
                    style="@style/ButtonSettings"
                    android:text="@string/send_feedback" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
