<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16C6FB"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layoutDirection="locale"
    android:orientation="vertical"
    tools:context=".activity.ParentLoginActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="@dimen/circular_image_width_large"
                    android:layout_height="@dimen/circular_image_height_large"
                    android:src="@drawable/parents_image"
                    app:civ_border_color="@color/cloud"
                    app:civ_border_width="@dimen/circular_image_border_large"
                    app:civ_circle_background_color="@color/cloud" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_24dp">

                <EditText
                    android:id="@+id/txtLogInEmail"
                    style="@style/MainEditText"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/darkest_blue"
                    android:textColorHint="@color/editText_Hint_Color" />

                <EditText
                    android:id="@+id/txtLogInPassword"
                    style="@style/MainEditText"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/darkest_blue"
                    android:textColorHint="@color/editText_Hint_Color" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBoxRememberMe"
                        style="@style/CustomCheckBoxStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me"
                        android:textColor="@color/darkest_blue" />

                    <TextView
                        android:id="@+id/txtForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:text="@string/forgot_your_password"
                        android:textColor="@color/dark_blue" />
                </FrameLayout>
            </LinearLayout>

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/OkButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_32dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_32dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:text="@string/login_button" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_32dp"
                    android:layout_marginEnd="@dimen/margin_32dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_8dp"
                        android:background="@color/darkest_blue" />

                    <TextView
                        android:layout_width="68dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_8dp"
                        android:gravity="center"
                        android:text="@string/or"
                        android:textColor="@color/darkest_blue" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_8dp"
                        android:background="@color/darkest_blue" />
                </LinearLayout>

            <Button
                android:id="@+id/btnSignUpGoogle"
                style="@style/OkButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_32dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/login_with_google" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_here"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:text="@string/sign_up_here"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
    </ScrollView>
</LinearLayout>