<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layoutDirection="locale"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    tools:context=".dialogfragment.ChangePasswordDialogFragment">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:cardBackgroundColor="@color/activity_bg"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/DialogFragmentBody"
                        android:layout_width="316dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:text="@string/enter_your_old_and_new_passowrd"
                        android:textColor="@color/darkest_blue"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txtOldPassword"
                        style="@style/DialogFragmentEditText"
                        android:drawableStart="@drawable/ic_lock"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        android:textColor="@color/darkest_blue"
                        android:textColorHint="@color/editText_Hint_Color"/>

                    <EditText
                        android:id="@+id/txtNewPassword"
                        style="@style/DialogFragmentEditText"
                        android:drawableStart="@drawable/ic_lock"
                        android:hint="@string/new_password"
                        android:textColor="@color/darkest_blue"
                        android:inputType="textPassword"
                        android:textColorHint="@color/editText_Hint_Color"/>

                    <EditText
                        android:id="@+id/txtNewPasswordConfirmation"
                        style="@style/DialogFragmentEditText"
                        android:drawableStart="@drawable/ic_lock"
                        android:hint="@string/reenter_new_password"
                        android:inputType="textPassword"
                        android:textColor="@color/darkest_blue"
                        android:textColorHint="@color/editText_Hint_Color"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:layout_marginBottom="@dimen/margin_8dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnCancelChangePassword"
                            style="@style/DialogFragmentButtonCancel" />

                        <Button
                            android:id="@+id/btnChangePassword"
                            style="@style/DialogFragmentButtonOk" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </FrameLayout>
    </LinearLayout>