<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    android:background="@color/activity_bg"
    tools:context=".activity.AccountVerificationActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_32dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:src="@drawable/ic_verified_user" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_32dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/account_verification"
                android:textAlignment="center"
                android:textColor="@color/darkest_blue"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_32dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/please_verify"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/darkest_blue"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnVerify"
            style="@style/OkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:text="@string/resend_verification_email" />


    </FrameLayout>